fix live score flicker

--- a/src/app/admin/views/live-score/live-score.component.scss
+++ b/src/app/admin/views/live-score/live-score.component.scss
@@ -210,3 +210,11 @@
     background-color: rgba(255, 255, 255, 0.5);
     
 }
+
+.visible {
+    opacity: 1;
+}
+
+.invisible {
+    opacity: 0;
+}
